# code-inspector

./: .gitignore  .ncurc.json  404.html  CONTRIBUTING.md  Cargo.toml  README.md  code-inspector.code-workspace  constraints.pro  index.html  opensearch.xml  package.json  sitemap.xml  tsconfig.json
.changeset/: bitter-doodles-send.md  chatty-apples-taste.md  chubby-parts-judge.md  config.json  cool-pigs-warn.md  dark-trains-read.md  dull-geckos-run.md  easy-needles-leave.md  eleven-needles-smell.md  full-doodles-hammer.md  grumpy-eagles-chew.md  legal-apes-smoke.md  mean-animals-live.md  modern-turkeys-start.md  old-clouds-brake.md  quiet-suns-fail.md  silver-dragons-fetch.md  silver-tigers-jump.md  sixty-memes-punch.md  smooth-steaks-scream.md  spicy-days-play.md
.github/workflows/: ci-inspector-babel-plugin.yml  ci-inspector-rspack.yml  ci-inspector-swc-plugin.yml  ci-inspector-vite.yml  ci-inspector-webpack.yml  ci-inspector.yml  ci-test-inspector-swc-plugin.yml  release-or-version-pr.yml  test.yml
assets/css/: styles.2047a27b.css  styles.8e744de2.css  styles.a98df93c.css
assets/js/: 0e384e19.08ad450d.js  0e384e19.897820b8.js  0e384e19.b1b5fc62.js  17896441.488209f1.js  17896441.9be86079.js  1858986d.14bf2120.js  190.5fc33aad.js  1a4e3797.638be8cc.js  1a4e3797.70d17621.js  1be6b01a.03903614.js  1be6b01a.3609b2eb.js  1be6b01a.94a5d8d0.js  1df93b7f.2b140e1b.js  1df93b7f.892eb2be.js  1f391b9e.192cbd03.js  1f391b9e.6d95d6fe.js  230.43dd1a02.js  29158e92.a7dcf714.js  29158e92.e649591c.js  29158e92.f94c18d8.js  300eb1d2.7f37326b.js  300eb1d2.e97fa4e6.js  300eb1d2.f7e4a205.js  3492c3da.185dc191.js  3492c3da.3a8e47df.js  3492c3da.53a05021.js  378.e2dafee7.js  393be207.18fee8d9.js  393be207.2486ca25.js  393be207.f937640d.js  473.8794f815.js  57349a88.6fdc45fe.js  57349a88.7085c191.js  57349a88.ffc3d8a7.js  5e95c892.48178c83.js  5e95c892.a0a45d99.js  605.82626a0d.js  714.fec801a1.js  74.cbba3693.js  791.f603d408.js  (+18 more)
crates/inspector-swc-plugin/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  eslint.config.js  package.json  tsconfig.json
crates/inspector-swc-plugin/src/: lib.rs
crates/inspector-swc-plugin/tests/: react-fragment.spec.ts  wasm.spec.ts
crates/inspector-swc-plugin/transform/: Cargo.toml
crates/inspector-swc-plugin/transform/src/: lib.rs  utils.rs
docs/api-reference/: index.html
docs/color-validation/: index.html
docs/css/: index.html
docs/getting-started/: index.html
docs/inheritance/: index.html
docs/playground/: index.html
docs/react-hook-form/: index.html
docs/typescript/: index.html
examples/example-nextjs/: CHANGELOG.md  next.config.mjs  package.json
examples/example-rspack/: CHANGELOG.md  README.md  index.html  package.json  rspack.config.mjs  tsconfig.json
examples/example-rspack/src/: App.tsx  index.css  main.tsx
examples/example-webpack/: CHANGELOG.md  README.md  package.json  tailwind.config.mjs  tsconfig.json  webpack.config.mjs
markdown-page/: index.html
search/: index.html
website/: CHANGELOG.md  docusaurus.config.ts  eslint.config.mjs  package.json  sidebars.ts
website/tests/: website.spec.ts
(+25 files in other folders)
